# open-erase

./: .dockerignore  .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Server.toml  build.rs  docker-compose.yml  iso-builder.Dockerfile
client/x86_64/: Cargo.toml  flake.nix
client/x86_64/iso/: pacman.conf  profiledef.sh
client/x86_64/iso/airootfs/etc/mkinitcpio.conf.d/: archiso.conf
client/x86_64/iso/airootfs/root/: .bash_profile
client/x86_64/iso/grub/: grub.cfg
client/x86_64/iso/syslinux/: syslinux-linux.cfg
client/x86_64/src/: app.rs  args.rs  input_handler.rs  main.rs  message.rs
client/x86_64/src/widgets/: window.rs
docker/: .env.sample  Dockerfile  dev.backend.Dockerfile  dev.web.Dockerfile  docker-compose.dev.yml  docker-compose.yml  iso-builder.Dockerfile
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/audit/: cpu.rs  mod.rs  pci.rs
lib/src/schemas/: image.rs  mod.rs  token.rs  user.rs
migrations/: 0001_init.sql  20250422123303_users.up.sql  20250422124236_insert_system_user.down.sql  20250422124236_insert_system_user.up.sql  20250425070937_refresh_tokens.down.sql
server/: Cargo.toml  Dockerfile  curl.txt  docker-compose.yml
server/migrations/: 00002_insert_system_user.down.sql  00003_refresh_tokens.up.sql  0001_users.down.sql  0001_users.up.sql  0003_refresh_tokens.down.sql  0004_reports.down.sql  0004_reports.up.sql  20250422123303_users.up.sql  20250422124236_insert_system_user.up.sql  20250425070937_refresh_tokens.up.sql  20250520180440_reports.up.sql  20251010120109_refresh_tokens.up.sql
server/src/: config.rs  error.rs  fallback_handler.rs  lib.rs  main.rs  state.rs  test_helpers.rs
server/src/auth/: password.rs
server/src/domain/: models.rs
server/src/handlers/: auth.rs  images.rs  mod.rs  user.rs
server/src/middleware/: auth.rs  log.rs
server/src/models/: image.rs  mod.rs  refresh_token.rs  report.rs  user.rs
server/src/repositories/: image.rs  mod.rs  refresh_token.rs  report.rs  user.rs  users.rs
server/src/repositories/mocks/: mod.rs  refresh_token.rs  user.rs
server/src/routes/: auth.rs  docs.rs  images.rs  mod.rs  user.rs  users.rs
server/src/schemas/: image.rs  mod.rs  token.rs  user.rs
server/src/services/: auth.rs  database.rs  hashing.rs  image.rs  mod.rs  token.rs  user.rs  users.rs
server/src/utils/: password_hasher.rs
server/tests/: endpoints.rs
src/: config.rs  error.rs  main.rs  migrations.rs
src/routes/: auth.rs  jwt.rs  mod.rs  user.rs
web/: Cargo.toml  Cargo.toml6iSDX1.bck  Dockerfile  Trunk.toml  build.rs  index.html  nginx.conf  package-lock.json  styles.css  tailwind.config.js
web/src/: app.rs  input.rs  login.rs  main.rs  navbar.rs
web/styles/: input.css
