[package]
name = "open-erase-server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.40", features = ["serde"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["chrono", "postgres", "runtime-tokio", "time", "tls-rustls", "uuid"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["compression-gzip", "timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["serde", "v7"] }
