[package]
name = "open-erase-lib"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
chrono = { version = "0.4.42", optional = true }
dmidecode = { version = "1.0.0", optional = true }
pci-info = { version = "0.3.4", optional = true }
pciid-parser = { version = "0.8.0", optional = true }
serde = { version = "1.0.228", optional = true }
uuid = { version = "1.18.1", optional = true }

[features]
default = []
audit = ["dep:dmidecode", "dep:pci-info", "dep:pciid-parser"]
schemas = ["dep:chrono", "dep:serde", "dep:uuid"]
