[package]
name = "open-erase-server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "^0.5"
axum = { version = "^0.8", features = ["macros"] }
axum-extra = { version = "^0.10", features = ["typed-header"] }
chrono = { version = "^0.4", features = ["serde"] }
getrandom = "^0.3"
hex = "^0.4"
jsonwebtoken = "^9.3"
serde = { version = "^1.0", features = ["derive"] }
sqlx = { version = "^0.8", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "time",
  "tls-rustls",
  "uuid",
] }
tokio = { version = "^1.47", features = ["macros", "rt-multi-thread"] }
toml = "^0.9"
tower = "^0.5"
tower-http = { version = "^0.6", features = [
  "compression-gzip",
  "fs",
  "timeout",
  "trace",
] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
utoipa = { version = "^5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "^9.0", features = ["axum"] }
uuid = { version = "^1.18", features = ["serde", "v7"] }
