[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.10.3", features = ["cookie", "typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
getrandom = "0.3.4"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "time",
  "tls-rustls",
  "uuid",
] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
  "compression-gzip",
  "fs",
  "timeout",
  "trace",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.145"
