[package]
name = "open-erase-web"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
icondata = "0.6.0"
leptos = { version = "0.8.11", features = ["csr"] }
leptos_icons = "0.7.0"
leptos_router = { version = "0.8.8", features = ["tracing"] }
wasm-bindgen = "=0.2.100"
