[package]
name = "open-erase-web"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
gloo-net = { version = "0.6.0", features = ["json"] }
icondata = "0.6.0"
leptos = { version = "0.8.13", features = ["csr"] }
leptos_icons = "0.7.0"
leptos_router = { version = "0.8.9", features = ["tracing"] }
open-erase-lib = { path = "../lib", features = ["schemas"] }
wasm-bindgen = "=0.2.100"
