[package]
name = "client-x86_64"
version = "0.1.0"
edition = "2024"

[dependencies]
open-erase-lib = { path = "../../lib", features = ["audit"] }

clap = { version = "4.5.53", default-features = false, features = [
  "cargo",
  "derive",
  "std",
] }
ratatui = { version = "0.29.0", default-features = false, features = [
  "termion",
] }
termion = "4.0.6"
